--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>PSD作業練習</title>
     <meta name="keywords" content="HTML,CSS,前端工程師">
     <meta name="description" content="HTML、CSS的最終試煉">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="all.css">
 </head>
 <body>
     <div class="wrap">
